# VladaVoronina_CSC_51074_EP

./: README.md
TD1/: CMakeLists.txt  README.md
TD1/src/: Transform.cpp  Transform.h  main.cpp
TD1/tests/: unittests.cpp
TD2/: CMakeLists.txt  ReadMe.md
TD2/src/: cubic.cpp  hermite.cpp  lagrange.cpp  linear.cpp  main.cpp  util.h
TD2/tests/: unittests.cpp
TD3/: CMakeLists.txt  ReadMe.md
TD3/src/: Bezier.cpp  Bezier.h  main.cpp
TD3/tests/: unittests.cpp
TD4/: CMakeLists.txt  README.md
TD4/CPP-Recap/: README.md
TD4/data/: bunny_fine.off
TD4/src/: HalfedgeDS.cpp  LaplacianMesh.cpp  LaplacianMesh.h  Mesh.cpp  MeshParts.cpp  MeshParts.h  main.cpp
TD4/tests/: unittests.cpp
TD5/: CMakeLists.txt  ReadMe.md
TD5/data/: sphere.off
TD5/src/: ICP.cpp  ICP.h  main.cpp  pca.cpp  pca.h
TD6/: CMakeLists.txt  README.md
TD6/data/: beetle_1.off  camelhead_1.off  face_1.off  hexagon.off
TD6/src/: Conformal.cpp  Conformal.h  main.cpp
TD6/tests/: unittests.cpp
TD7/: CMakeLists.txt
TD7/data/: output.off
TD7/src/: HalfedgeBuilder.cpp  HalfedgeBuilder.h  HalfedgeDS.h  LoopSubdivision.cpp  LoopSubdivision.h  SphereGeneration.cpp  SphereGeneration.h  main.cpp
TD8/: CMakeLists.txt
TD8/data/: bunny_delaunay_coarser.off  bunny_new.off  torus_coarser.off
TD8/src/: ElectricMesh.cpp  ElectricMesh.h  HalfedgeBuilder.cpp  HalfedgeBuilder.h  HalfedgeDS.cpp  Mesh.cpp  MeshParts.cpp  MeshParts.h  main.cpp
TD8/tests/: unittest.cpp
TD9/: CMakeLists.txt
TD9/data/: bunny_1400.off  bunny_delaunay.off  flat_cube.off  flat_square.off  torus.off  torus_fine.off  torus_reg.off
TD9/src/: HalfedgeBuilder.cpp  HalfedgeBuilder.h  HalfedgeDS.cpp  HalfedgeDS.h  Mesh.cpp  Mesh.h  MeshParts.cpp  MeshParts.h  TrivConnMesh.cpp  TrivConnMesh.h  main.cpp
TD9/tests/: unittest.cpp
